# nautobot-app-mcp-server

./: .cookiecutter.json  .gitignore  CLAUDE.md  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  nautobot_import.env.example  pyproject.toml  tasks.py
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  upstream_testing.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  STACK.md  (+5 more)
development/: Dockerfile  creds.example.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mcp.yml  nautobot_config.py  towncrier_template.j2
nautobot-mcp-skill/: SKILL.md  pyproject.toml
nautobot-mcp-skill/nautobot_mcp_skill/: SKILL.md  __init__.py
nautobot_app_mcp_server/: __init__.py  tool_registry.json  urls.py
scripts/: fetch_production_data.py  import_production_data.py  reset_dev_db.sh  run_graphql_uat.py  run_mcp_uat.py  run_mcp_uat_all_tools.py  run_mcp_uat_gql_only.py  test_mcp_simple.py
(+383 files in other folders)
